--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/scss/bootstrap';
+
+
+
+label {
+    font-size: 1.2rem;
+  }
+  
+  .form-control,
+  .card-text {
+    font-size: 1.5rem;
+    color: rgb(0, 0, 0);
+  }
+  
+  .card-title {
+    color: rgb(0, 0, 0);
+  }
+  
+  .container {
+    color: white;
+  }
+  
