--- a/src/app/retirement-income/retirement-income.component.html
+++ b/src/app/retirement-income/retirement-income.component.html
@@ -96,7 +96,7 @@
     </div>
     <hr/>
     <div class="row">
-<span class="col-12 text-center" style="font-size:12px;">*Disclaimer: Assumed investments are tax deferred. (Roth IRA, Roth 401k & Roth TSP). Fees or inflation are not included in illustration.*</span>
+<span class="col-12 text-center" style="font-size:12px;">*Disclaimer: Assumed investments are tax deferred. (Roth IRA, Roth 401k & Roth TSP). Fees or inflation are not included in calculation.*</span>
 </div>
 
   
