--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,13 +2,13 @@
   <div class="row">
   <h1>Recommended Books - <i class="fa fa-book"></i></h1>
     <hr />
-      <div class="col-12 col-md-4 my-1 text-center">
+      <div class="col-12 col-md my-1 text-center">
         <a  target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
         class="img-fluid"
         /></a>
         <a  target="_blank" class="fs-3 text-white" title="Too Much Money" href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
       </div>
-      <div class="col-12 col-md-4 my-1 text-center">
+      <div class="col-12 col-md my-1 text-center">
         <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img src="assets/turbo-divs.jpg"
         class="img-fluid"
         />
@@ -21,8 +21,8 @@
   <h1>Calculators - <i class="fa fa-calculator"></i></h1>
     <hr />
         <div class="row">
-          <div class="col-12 col-md-4 my-1 text-center">
-            <a target="_blank" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome" routerLinkActive="active"><img src="assets/retire-calc.jpg"
+          <div class="col-12 col-md-6 my-1 text-center">
+            <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome" routerLinkActive="active"><img src="assets/retire-calc.jpg"
               class="img-fluid"
               />
             </a>
