--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,33 +1,45 @@
 <div class="container bg-dark rounded my-auto p-2 pb-5" style="min-height:491px;">
   <div class="row">
-  <h1>Recommended Books - <i class="fa fa-book"></i></h1>
+    <h1>Calculators - <i class="fa fa-calculator"></i></h1>
     <hr />
-      <div class="col-10 offset-1 offset-md-0 col-md my-1 text-center">
-        <a  target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
-        class="img-fluid rounded" alt="Too Much Money"
-        /></a>
-        <a  target="_blank" class="fs-3 text-white" title="Too Much Money" href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
+    <div class="row">
+      <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+        <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active"><img src="assets/retire-calc.jpg" class="img-fluid rounded"
+            alt="Retirement Income Calculator" />
+        </a>
+        <a class="fs-3 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active">Retirement Income</a>
       </div>
-      <div class="col-10 offset-1 offset-md-0 col-md my-1 text-center">
-        <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img src="assets/turbo-divs.jpg"
-        class="img-fluid rounded" alt="Turbocharge Your Dividends"
-        />
+      <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+        <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
+          fragment="calculator" routerLinkActive="active"><img src="assets/covered-call-calc.jpg"
+            class="img-fluid rounded" alt="Covered Call ETF Income Calculator" />
+        </a>
+        <a class="fs-3 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
+          fragment="calculator" routerLinkActive="active">Covered Call ETF
+          Calculator</a>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <h1>Recommended Books - <i class="fa fa-book"></i></h1>
+    <hr />
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
+          src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
+          class="img-fluid rounded" alt="Too Much Money" /></a>
+      <a target="_blank" class="fs-3 text-white" title="Too Much Money"
+        href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
+    </div>
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
+          src="assets/turbo-divs.jpg" class="img-fluid rounded" alt="Turbocharge Your Dividends" />
       </a>
-        <a target="_blank" class="fs-3 text-white" href="https://gumroad.com/a/304280691/DHxdC" title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
-      </div>
-      
-</div>
-<div class="row">
-  <h1>Calculators - <i class="fa fa-calculator"></i></h1>
-    <hr />
-        <div class="row">
-          <div class="col-10 offset-1 offset-md-0 col-md-6 my-1 text-center">
-            <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome" routerLinkActive="active"><img src="assets/retire-calc.jpg"
-              class="img-fluid rounded" alt="Retirement Income Calculator"
-              />
-            </a>
-            <a class="fs-3 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome" routerLinkActive="active">Retirement Income</a>
-          </div>
-          
-</div>
+      <a target="_blank" class="fs-3 text-white" href="https://gumroad.com/a/304280691/DHxdC"
+        title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
+    </div>
+
+  </div>
+
 </div>
