--- a/src/app/dividend-calculator/dividend-calculator.component.html
+++ b/src/app/dividend-calculator/dividend-calculator.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-dark rounded p-2" style="min-height:491px;">
     <h1>Monthly Covered Call ETFs</h1>
-    <div class="col-12 text-white">
+    <div class="text-white">
         <hr style="background:white; height:2px;" />
         <h3 class="text-white">What Is A Covered Call ETF?</h3>
         <p class="text-white">A Covered Call ETF is an ETF Managed by an Investment Firm, that writes Covered Call
