--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-dark rounded my-auto p-2 pb-5" style="min-height:491px;">
+<div class="container bg-dark rounded my-auto p-2 pb-3 mb-2" style="min-height:491px;">
   <div class="row">
     <h1>Calculators - <i class="fa fa-calculator"></i></h1>
     <hr />
@@ -39,7 +39,13 @@
       <a target="_blank" class="fs-3 text-white" href="https://gumroad.com/a/304280691/DHxdC"
         title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
     </div>
-
+    <hr />
+    <p style="font-size:10px; margin-top:15px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
+      contain affiliate links where the website owner may receive a small affiliate commission for recommending the
+      product. I am not a financial advisor, the information provided throughout this website is desinged to be used
+      for educational purposes only. Do your own reseach before investing, seek financial advice from a certified
+      financial advisor if needed.*
+    </p>
   </div>
 
 </div>
