--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -40,7 +40,7 @@
         title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
     </div>
     <hr />
-    <p style="font-size:10px; margin-top:15px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
+    <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
       contain affiliate links where the website owner may receive a small affiliate commission for recommending the
       product. I am not a financial advisor, the information provided throughout this website is desinged to be used
       for educational purposes only. Do your own reseach before investing, seek financial advice from a certified
