--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,49 @@
 <div class="container bg-dark rounded my-auto p-2 pb-3 mb-2" style="min-height:491px;">
-  <div class="row">
-    <h1>Calculators - <i class="fa fa-calculator"></i></h1>
+  <div class="row my-1">
+    <h1>Recommended Brokerages - <i class="fa fa fa-line-chart"></i></h1>
+    <hr />
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" href="https://personal1.vanguard.com/mmx-move-money/welcome"><img
+          src="assets/vanguard-logo.jpg" title="Open a Brokerage Account with Vanguard" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Vanguard" /></a>
+      <a target="_blank" class="fs-3 text-white" title="Open a Brokerage Account with Vanguard"
+        href="https://personal1.vanguard.com/mmx-move-money/welcome">Vanguard</a>
+    </div>
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" href="http://join.robinhood.com/zacharc396"><img src="assets/rh-logo.jpg"
+          title="Open a Brokerage Account with Robinhood" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Robinhood" /></a>
+      <a target="_blank" class="fs-3 text-white" title="Open a Brokerage Account with Robinhood"
+        href="http://join.robinhood.com/zacharc396">Robinhood</a>
+    </div>
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" href="https://crypto.com/"><img src="assets/crypto-logo.jpg"
+          title="Open a Brokerage Account with Crypto.com" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Crypto.com" /></a>
+      <a target="_blank" class="fs-3 text-white" title="Open a Brokerage Account with Robinhood"
+        href="https://crypto.com/">Crypto.com</a>
+    </div>
+  </div>
+  <div class="row my-1">
+    <h1>Recommended Books - <i class="fa fa-book"></i></h1>
+    <hr />
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
+          src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
+          class="img-fluid rounded" alt="Too Much Money" /></a>
+      <a target="_blank" class="fs-3 text-white" title="Too Much Money"
+        href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
+    </div>
+    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
+          src="assets/turbo-divs.jpg" class="img-fluid rounded" alt="Turbocharge Your Dividends" />
+      </a>
+      <a target="_blank" class="fs-3 text-white" href="https://gumroad.com/a/304280691/DHxdC"
+        title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
+    </div>
+  </div>
+  <div class="row my-1">
+    <h1>Income Calculators - <i class="fa fa-calculator"></i></h1>
     <hr />
     <div class="row">
       <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
@@ -22,30 +65,11 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <h1>Recommended Books - <i class="fa fa-book"></i></h1>
-    <hr />
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
-      <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
-          src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
-          class="img-fluid rounded" alt="Too Much Money" /></a>
-      <a target="_blank" class="fs-3 text-white" title="Too Much Money"
-        href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
-    </div>
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
-      <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
-          src="assets/turbo-divs.jpg" class="img-fluid rounded" alt="Turbocharge Your Dividends" />
-      </a>
-      <a target="_blank" class="fs-3 text-white" href="https://gumroad.com/a/304280691/DHxdC"
-        title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
-    </div>
-    <hr />
-    <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
-      contain affiliate links where the website owner may receive a small affiliate commission for recommending the
-      product. I am not a financial advisor, the information provided throughout this website is desinged to be used
-      for educational purposes only. Do your own reseach before investing, seek financial advice from a certified
-      financial advisor if needed.*
-    </p>
-  </div>
-
+  <hr />
+  <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
+    contain affiliate links where the website owner may receive a small affiliate commission for recommending the
+    product. I am not a financial advisor, the information provided throughout this website is desinged to be used
+    for educational purposes only. Do your own reseach before investing, seek financial advice from a certified
+    financial advisor if needed.*
+  </p>
 </div>
