--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -56,11 +56,11 @@
       </div>
       <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
-          fragment="calculator" routerLinkActive="active"><img src="assets/covered-call-calc.jpg"
+          routerLinkActive="active"><img src="assets/covered-call-calc.jpg"
             class="img-fluid rounded" alt="Covered Call ETF Income Calculator" />
         </a>
         <a class="fs-3 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
-          fragment="calculator" routerLinkActive="active">Covered Call ETF
+         routerLinkActive="active">Covered Call ETF
           Calculator</a>
       </div>
     </div>
