--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-dark rounded my-auto p-2 pb-3 mb-2" style="min-height:491px;">
   <div class="row my-1">
-    <h1>Recommended Brokerages - <i class="fa fa fa-line-chart"></i></h1>
+    <h1>Recommended Brokers - <i class="fa fa fa-line-chart"></i></h1>
     <hr />
     <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
       <a target="_blank" href="https://personal1.vanguard.com/mmx-move-money/welcome"><img
