ui dark theme updates

--- a/src/app/covered-call-calculator/covered-call-calculator.component.html
+++ b/src/app/covered-call-calculator/covered-call-calculator.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-dark rounded p-2" style="min-height:491px;">
+<div class="container bg-black shawdow-lg p-2" style="min-height:491px;">
     <h1>Monthly Covered Call ETFs</h1>
     <div class="text-white">
         <hr style="background:white; height:2px;" />
