--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,45 +1,45 @@
-<div class="container bg-dark rounded my-auto p-2 pb-3 mb-2" style="min-height:491px;">
-  <div class="row my-1">
-    <h1>Recommended Brokers - <i class="fa fa fa-line-chart"></i></h1>
-    <hr />
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
-      <a target="_blank" href="https://personal1.vanguard.com/mmx-move-money/welcome"><img
-          src="assets/vanguard-logo.jpg" title="Open a Brokerage Account with Vanguard" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Vanguard" /></a>
-      <a target="_blank" class="fs-3 text-white" title="Open a Brokerage Account with Vanguard"
-        href="https://personal1.vanguard.com/mmx-move-money/welcome">Vanguard</a>
-    </div>
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
-      <a target="_blank" href="http://join.robinhood.com/zacharc396"><img src="assets/rh-logo.jpg"
-          title="Open a Brokerage Account with Robinhood" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Robinhood" /></a>
-      <a target="_blank" class="fs-3 text-white" title="Open a Brokerage Account with Robinhood"
-        href="http://join.robinhood.com/zacharc396">Robinhood</a>
-    </div>
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
-      <a target="_blank" href="https://crypto.com/"><img src="assets/crypto-logo.jpg"
-          title="Open a Brokerage Account with Crypto.com" class="img-fluid rounded"
-          alt="Open a Brokerage Account with Crypto.com" /></a>
-      <a target="_blank" class="fs-3 text-white" title="Open a Brokerage Account with Robinhood"
-        href="https://crypto.com/">Crypto.com</a>
-    </div>
-  </div>
+<div class="container bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
   <div class="row my-1">
     <h1>Recommended Books - <i class="fa fa-book"></i></h1>
     <hr />
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+    <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
           src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
-          class="img-fluid rounded" alt="Too Much Money" /></a>
-      <a target="_blank" class="fs-3 text-white" title="Too Much Money"
+          class="img-fluid rounded" title="Too Much Money" alt="Too Much Money" /></a>
+      <a target="_blank" class="fs-5 text-white" title="Too Much Money"
         href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
     </div>
-    <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+    <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
           src="assets/turbo-divs.jpg" class="img-fluid rounded" alt="Turbocharge Your Dividends" />
       </a>
-      <a target="_blank" class="fs-3 text-white" href="https://gumroad.com/a/304280691/DHxdC"
+      <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/304280691/DHxdC"
         title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
+    </div>
+  </div>
+  <div class="row my-1">
+    <h1>Recommended Brokers - <i class="fa fa fa-line-chart"></i></h1>
+    <hr />
+    <div class="col-6 col-md-3 my-1 text-center">
+      <a target="_blank" href="https://personal1.vanguard.com/mmx-move-money/welcome"><img
+          src="assets/vanguard-logo.jpg" title="Open a Brokerage Account with Vanguard" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Vanguard" /></a>
+      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Vanguard"
+        href="https://personal1.vanguard.com/mmx-move-money/welcome">Vanguard</a>
+    </div>
+    <div class="col-6 col-md-3 my-1 text-center">
+      <a target="_blank" href="http://join.robinhood.com/zacharc396"><img src="assets/rh-logo.jpg"
+          title="Open a Brokerage Account with Robinhood" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Robinhood" /></a>
+      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Robinhood"
+        href="http://join.robinhood.com/zacharc396">Robinhood</a>
+    </div>
+    <div class="col-6 col-md-3 my-1 text-center">
+      <a target="_blank" href="https://crypto.com/"><img src="assets/crypto-logo.jpg"
+          title="Open a Brokerage Account with Crypto.com" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Crypto.com" /></a>
+      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Robinhood"
+        href="https://crypto.com/">Crypto.com</a>
     </div>
   </div>
   <div class="row my-1">
@@ -51,16 +51,16 @@
           routerLinkActive="active"><img src="assets/retire-calc.jpg" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
-        <a class="fs-3 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
+        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
           routerLinkActive="active">Retirement Income</a>
       </div>
       <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
-          routerLinkActive="active"><img src="assets/covered-call-calc.jpg"
-            class="img-fluid rounded" alt="Covered Call ETF Income Calculator" />
+          routerLinkActive="active"><img src="assets/covered-call-calc.jpg" class="img-fluid rounded"
+            alt="Covered Call ETF Income Calculator" />
         </a>
-        <a class="fs-3 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
-         routerLinkActive="active">Covered Call ETF
+        <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active">Covered Call ETF
           Calculator</a>
       </div>
     </div>
