--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -28,6 +28,13 @@
         href="https://personal1.vanguard.com/mmx-move-money/welcome">Vanguard</a>
     </div>
     <div class="col-6 col-md-3 my-1 text-center">
+      <a target="_blank" href="https://www.fidelity.com/open-account/overview"><img src="assets/fidelity-logo.jpg"
+          title="Open a Brokerage Account with Fidelity" class="img-fluid rounded"
+          alt="Open a Brokerage Account with Fidelity" /></a>
+      <a target="_blank" class="fs-4 text-white" title="Open a Brokerage Account with Fidelity"
+        href="https://www.fidelity.com/open-account/overview">Fidelity</a>
+    </div>
+    <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" href="http://join.robinhood.com/zacharc396"><img src="assets/rh-logo.jpg"
           title="Open a Brokerage Account with Robinhood" class="img-fluid rounded"
           alt="Open a Brokerage Account with Robinhood" /></a>
@@ -46,7 +53,7 @@
     <h1>Income Calculators - <i class="fa fa-calculator"></i></h1>
     <hr />
     <div class="row">
-      <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <div class="col-6 col-md-3 my-1 text-center">
         <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
           routerLinkActive="active"><img src="assets/retire-calc.jpg" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
@@ -54,7 +61,7 @@
         <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
           routerLinkActive="active">Retirement Income</a>
       </div>
-      <div class="col-10 offset-1 offset-md-0 col-md-4 my-1 text-center">
+      <div class="col-6 col-md-3 my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
           routerLinkActive="active"><img src="assets/covered-call-calc.jpg" class="img-fluid rounded"
             alt="Covered Call ETF Income Calculator" />
