--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -73,6 +73,28 @@
     </div>
   </div>
   <hr />
+  <div class="row my-1">
+    <h1>Ex. Dividend Portfolio Calendars - <i class="fa fa-calendar"></i></h1>
+    <hr />
+    <div class="row">
+      <div class="col-6 col-md-3 my-1 text-center">
+        <a title="Consumer Based Portfolio" routerLink="/DividendCalendar/" routerLinkActive="active"><img
+            src="assets/schedule.jpg" class="img-fluid rounded" alt="Consumer Based Portfolio" />
+        </a>
+        <a class="fs-4 text-white" title="Consumer Based Portfolio" routerLink="/DividendCalendar/"
+          routerLinkActive="active">Consumer Based</a>
+      </div>
+      <div class="col-6 col-md-3 my-1 text-center">
+        <a title="Tech. Based" routerLink="/DividendCalendar/" routerLinkActive="active"><img
+            src="assets/tech-growth-dividend-monthly.jpg" class="img-fluid rounded"
+            alt="Tech. Based Dividend Portfolio" />
+        </a>
+        <a class="fs-4 text-white" title="Tech. Based" routerLink="/DividendCalendar/" routerLinkActive="active">Tech.
+          Based</a>
+      </div>
+    </div>
+  </div>
+  <hr />
   <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
     contain affiliate links where the website owner may receive a small affiliate commission for recommending the
     product. I am not a financial advisor, the information provided throughout this website is desinged to be used
