--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -74,7 +74,7 @@
   </div>
   <hr />
   <div class="row my-1">
-    <h1>Ex. Dividend Portfolio Calendars - <i class="fa fa-calendar"></i></h1>
+    <h1>Ex. Monthly Dividend Portfolios - <i class="fa fa-calendar"></i></h1>
     <hr />
     <div class="row">
       <div class="col-6 col-md-3 my-1 text-center">
