--- a/src/app/dividend-calendar/dividend-calendar.component.html
+++ b/src/app/dividend-calendar/dividend-calendar.component.html
@@ -25,14 +25,14 @@
             </div>
         </div> -->
         <div class="row">
-            <div class="col">
+            <div class="col-12 col-md">
                 <h3 class="text-white bg-dark rounded col-12 col-md p-1">Consumer Based - 5 Stock Portfolio</h3>
                 <img src="assets/schedule.jpg" class="w-100" />
                 <p class="text-center bg-success">$WMT, $LOW, $SBUX, $MCD, $KO</p>
                 <hr style="background:white; height:2px;" />
             </div>
 
-            <div class="col">
+            <div class="col-12 col-md">
                 <h3 class="text-white bg-dark rounded col-12 col-md p-1">Tech Dividend/Growth Based - 5 Stock
                     Portfolio</h3>
                 <img src="assets/tech.png" class="w-100" />
