--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -94,6 +94,20 @@
     </div>
   </div>
   <hr />
+  <div class="row my-1">
+    <h1>Options/Dividends Logger Web App - <i class="fa fa-bar-chart"></i></h1>
+    <hr />
+    <div class="row">
+      <div class="col-6 col-md-3 my-1 text-center">
+        <a target="_blank" title="Options Logger" href="https://optionslogger.com"><img
+            src="https://optionslogger.com/files/ol-logo.jpg" class="img-fluid rounded" alt="OptionsLogger.com" />
+        </a>
+        <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
+          href="https://optionslogger.com">OptionsLogger.com</a>
+      </div>
+    </div>
+  </div>
+  <hr />
   <p style="font-size:10px;">*<em><u>DISCLAIMER:</u></em> Some of the links above may
     contain affiliate links where the website owner may receive a small affiliate commission for recommending the
     product. I am not a financial advisor, the information provided throughout this website is desinged to be used
