--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -88,7 +88,8 @@
         <a title="Tech. Based" routerLink="/DividendCalendar/" routerLinkActive="active"><img src="assets/tech.png"
             class="img-fluid rounded" alt="Tech. Based Dividend Portfolio" />
         </a>
-        <a class="fs-4 text-white" title="Tech. Based" routerLink="/DividendCalendar/" routerLinkActive="active">Tech.
+        <a class="fs-4 text-white" title="Tech. Based" routerLink="/DividendCalendar/"
+          routerLinkActive="active">Technology
           Based</a>
       </div>
     </div>
