--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -16,6 +16,20 @@
       <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/304280691/DHxdC"
         title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
     </div>
+    <div class="col-6 col-md-3 my-1 text-center">
+      <a target="_blank" title="Get Paid While You Wait" href="https://gumroad.com/a/304280691/yjPAg"><img
+          src="assets/get-paid-while-you-wait.jpg" class="img-fluid rounded" alt="Get Paid While You Wait" />
+      </a>
+      <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/304280691/yjPAg"
+        title="Get Paid While You Wait">"Get Paid While You Wait"</a>
+    </div>
+    <div class="col-6 col-md-3 my-1 text-center">
+      <a target="_blank" title="10 Forever Dividend Stocks" href="https://gumroad.com/a/707294323/geCIq"><img
+          src="assets/10-forever-dividend-stocks.jpg" class="img-fluid rounded" alt="10 Forever Dividend Stocks" />
+      </a>
+      <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/707294323/geCIq"
+        title="Get Paid While You Wait">"10 Forever Dividend Stocks"</a>
+    </div>
   </div>
   <div class="row my-1">
     <h1>Recommended Brokers - <i class="fa fa fa-line-chart"></i></h1>
@@ -88,7 +102,7 @@
         <a title="Tech. Based" routerLink="/DividendCalendar/" routerLinkActive="active"><img src="assets/tech.png"
             class="img-fluid rounded" alt="Tech. Based Dividend Portfolio" />
         </a>
-        <a class="fs-4 text-white" title="Tech. Based" routerLink="/DividendCalendar/"
+        <a class="fs-4 text-white" title="Technology Based" routerLink="/DividendCalendar/"
           routerLinkActive="active">Technology
           Based</a>
       </div>
