--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
   <div class="row my-1">
-    <h1>Recommended Books - <i class="fa fa-book"></i></h1>
+    <h1>Recommended eBooks - <i class="fa fa-book"></i></h1>
     <hr />
     <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
