--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,5 +1,36 @@
 <div class="container bg-black shawdow-lg rounded my-auto p-3 pb-3 mb-2" style="min-height:491px;">
   <div class="row my-1">
+    <h1>Web Applications - <i class="fa fa-bar-chart"></i></h1>
+    <hr />
+    <div class="row">
+      <div class="col-6 col-md my-1 text-center">
+        <a target="_blank" title="Options Logger" href="https://optionslogger.com"><img src="assets/ol.jpg"
+            class="img-fluid rounded" alt="OptionsLogger.com" />
+        </a>
+        <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
+          href="https://optionslogger.com">OptionsLogger.com</a>
+      </div>
+      <div class="col-6 col-md my-1 text-center">
+        <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active"><img src="assets/r-calc.png" class="img-fluid rounded border"
+            alt="Retirement Income Calculator" />
+        </a>
+        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active">Retirement Income Calculator</a>
+      </div>
+      <div class="col-6 col-md my-1 text-center">
+        <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
+          routerLinkActive="active"><img src="assets/c-calc.png" class="img-fluid rounded border"
+            alt="Covered Call ETF Income Calculator" />
+        </a>
+        <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
+          routerLinkActive="active">Covered Call ETF
+          Calculator</a>
+      </div>
+    </div>
+  </div>
+  <hr />
+  <div class="row my-1">
     <h1>Recommended eBooks - <i class="fa fa-book"></i></h1>
     <hr />
     <div class="col-6 col-md-3 my-1 text-center">
@@ -63,29 +94,6 @@
         href="https://crypto.com/">Crypto.com</a>
     </div>
   </div>
-  <div class="row my-1">
-    <h1>Income Calculators - <i class="fa fa-calculator"></i></h1>
-    <hr />
-    <div class="row">
-      <div class="col-6 col-md-3 my-1 text-center">
-        <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active"><img src="assets/retire-calc.jpg" class="img-fluid rounded"
-            alt="Retirement Income Calculator" />
-        </a>
-        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active">Retirement Income</a>
-      </div>
-      <div class="col-6 col-md-3 my-1 text-center">
-        <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
-          routerLinkActive="active"><img src="assets/covered-call-calc.jpg" class="img-fluid rounded"
-            alt="Covered Call ETF Income Calculator" />
-        </a>
-        <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active">Covered Call ETF
-          Calculator</a>
-      </div>
-    </div>
-  </div>
   <hr />
   <div class="row my-1">
     <h1>Ex. Monthly Dividend Portfolios - <i class="fa fa-calendar"></i></h1>
@@ -105,20 +113,6 @@
         <a class="fs-4 text-white" title="Technology Based" routerLink="/DividendCalendar/"
           routerLinkActive="active">Technology
           Based</a>
-      </div>
-    </div>
-  </div>
-  <hr />
-  <div class="row my-1">
-    <h1>Options/Dividends Logger Web App - <i class="fa fa-bar-chart"></i></h1>
-    <hr />
-    <div class="row">
-      <div class="col-6 col-md-3 my-1 text-center">
-        <a target="_blank" title="Options Logger" href="https://optionslogger.com"><img
-            src="https://optionslogger.com/files/ol-logo.jpg" class="img-fluid rounded" alt="OptionsLogger.com" />
-        </a>
-        <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
-          href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
     </div>
   </div>
