--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -12,7 +12,7 @@
       </div>
       <div class="col-6 col-md my-1 text-center">
         <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active"><img src="assets/r-calc.png" class="img-fluid rounded border"
+          routerLinkActive="active"><img src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
         <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
@@ -20,7 +20,7 @@
       </div>
       <div class="col-6 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
-          routerLinkActive="active"><img src="assets/c-calc.png" class="img-fluid rounded border"
+          routerLinkActive="active"><img src="assets/Covered-Call-ETF-Income-Calculator.png" class="img-fluid rounded"
             alt="Covered Call ETF Income Calculator" />
         </a>
         <a class="fs-4 text-white" title="Covered Call ETF Income Calculator" routerLink="/Calculators/RetirementIncome"
