--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -4,19 +4,18 @@
     <hr />
     <div class="row">
       <div class="col-6 col-md my-1 text-center">
-        <a target="_blank" title="Options Logger" href="https://optionslogger.com"><img src="assets/ol.jpg"
+        <a target="_blank" title="OptionsLogger.com" href="https://optionslogger.com"><img src="assets/ol.jpg"
             class="img-fluid rounded" alt="OptionsLogger.com" />
         </a>
         <a target="_blank" class="fs-4 text-white" title="OptionsLogger.com"
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
       <div class="col-6 col-md my-1 text-center">
-        <a title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active"><img src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
+        <a title="Retirement Income Calculator" href="https://zcarroll.gumroad.com/l/RetirementIncomeCalculator"
+          ><img src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
-        <a class="fs-4 text-white" title="Retirement Income Calculator" routerLink="/Calculators/RetirementIncome"
-          routerLinkActive="active">Retirement Income Calculator</a>
+        <a class="fs-4 text-white" title="Retirement Income Calculator" href="https://zcarroll.gumroad.com/l/RetirementIncomeCalculator">Retirement Income Calculator</a>
       </div>
       <div class="col-6 col-md my-1 text-center">
         <a title="Covered Call ETF Income Calculator" routerLink="/Calculators/CoveredCallETFIncome"
@@ -37,29 +36,29 @@
       <a target="_blank" href="https://gumroad.com/a/707294323/CSdwG"><img
           src="https://public-files.gumroad.com/variants/wa9fsdmbmvjuvkn1nzmbdtfwjcno/3298c3eb001bbed90f1d616da66708480096a0a1b6e81bd4f8a2d6e9b831d301"
           class="img-fluid rounded" title="Too Much Money" alt="Too Much Money" /></a>
-      <a target="_blank" class="fs-5 text-white" title="Too Much Money"
-        href="https://gumroad.com/a/707294323/CSdwG">"Too Much Money"</a>
+      <a target="_blank" class="text-white mt-2" title="Too Much Money"
+        href="https://gumroad.com/a/707294323/CSdwG">Too Much Money</a>
     </div>
     <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" title="Turbocharge Your Dividends" href="https://gumroad.com/a/304280691/DHxdC"><img
           src="assets/turbo-divs.jpg" class="img-fluid rounded" alt="Turbocharge Your Dividends" />
       </a>
-      <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/304280691/DHxdC"
-        title="Turbocharge Your Dividends">"Turbocharge Your Dividends"</a>
+      <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/304280691/DHxdC"
+        title="Turbocharge Your Dividends">Turbocharge Your Dividends</a>
     </div>
     <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" title="Get Paid While You Wait" href="https://gumroad.com/a/304280691/yjPAg"><img
           src="assets/get-paid-while-you-wait.jpg" class="img-fluid rounded" alt="Get Paid While You Wait" />
       </a>
-      <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/304280691/yjPAg"
-        title="Get Paid While You Wait">"Get Paid While You Wait"</a>
+      <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/304280691/yjPAg"
+        title="Get Paid While You Wait">Get Paid While You Wait</a>
     </div>
     <div class="col-6 col-md-3 my-1 text-center">
       <a target="_blank" title="10 Forever Dividend Stocks" href="https://gumroad.com/a/707294323/geCIq"><img
           src="assets/10-forever-dividend-stocks.jpg" class="img-fluid rounded" alt="10 Forever Dividend Stocks" />
       </a>
-      <a target="_blank" class="fs-5 text-white" href="https://gumroad.com/a/707294323/geCIq"
-        title="Get Paid While You Wait">"10 Forever Dividend Stocks"</a>
+      <a target="_blank" class="text-white mt-2" href="https://gumroad.com/a/707294323/geCIq"
+        title="Get Paid While You Wait">10 Forever Dividend Stocks</a>
     </div>
   </div>
   <div class="row my-1">
