--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -11,7 +11,7 @@
           href="https://optionslogger.com">OptionsLogger.com</a>
       </div>
       <div class="col-6 col-md my-1 text-center">
-        <a title="Retirement Income Calculator" href="https://zcarroll.gumroad.com/l/RetirementIncomeCalculator"
+        <a title="Retirement Income Calculator" href="hhttps://stackdividends.gumroad.com/l/RetirementIncomeCalculator"
           ><img src="assets/Retirement-Income-Calculator-1.png" class="img-fluid rounded"
             alt="Retirement Income Calculator" />
         </a>
